  _    _          _   _
 | |  | |        | | (_)              
 | |__| |   ___  | |  _    ___    ___
 |  __  |  / _ \ | | | |  / _ \  / __|
 | |  | | |  __/ | | | | | (_) | \__ \
 |_|  |_|  \___| |_| |_|  \___/  |___/


Ragnarok Emulator
Developers & Contributers
- RaX
- Aeomin
- Spre
- RabidCh

--------------------------------------------------------------------------------

-Rev 31-
[2008/9/21] RaX - Fixed more typos in game.sql.
-

- Rev 30 -
[2008/09/21] Aeomin - Updated mailbox.
-

-Rev 29-
[2008/8/17] RabidCh - Changed item_type in itemdefinions to ENUM.
[2008/8/17] RabidCh - Fixed misspelling of usable in itemdefinitions.
-


-Rev 28-
[2008/6/29] Spre - READDED the mail sql, this time using Aeomins version of it, which works much better.
[2008/6/29] Spre -  Fixed some small issues in SQLITE.
-


-Rev 27-
[2008/6/28] Spre - Fixed a changelog typo :D. Also one small adjustment to the new sqlite update.
-

-Rev 26-
[2008/6/28] Spre - Same as revision 25 but for SQLITE, any issues let me know or revert.
-

-Rev 25-
[2008/6/28] Spre - Went ahead and added some more sql, this will be tweaked as the features get written, this is just a *layout*
-

-Rev 24-
[2008/6/28] Spre - Went ahead and added the mob sql that I never committed to branches/
-

-Rev 23-
[2008/4/10] RabidCh - Most items are completely defined without function names.  Database is missing eggs and ammo items.
-

-Rev 22-
[2008/4/10] RabidCh - Equips completed (without function names).
-

-Rev 21-
[2008/4/6] RabidCh - Added "compound_eq_location" to itemdefinitions fields.
-

-Rev 20-
[2008/4/6] RabidCh - Erased Spre's item database entries. :)
[2008/4/6] RabidCh - Renamed for clarification, many fields of itemdefinitionsequip.
[2008/4/6] RabidCh - Added in all equipable item records.  Some items are entered in strangely... Muad_Dib needed.
-

-Rev 19-
[2008/3/21] Spre - Updated maps table.
-

-Rev 18-
[2008/3/17] Spre - Added header to changelog.
-

-Rev 17-