@@ -3,24 +3,24 @@ CREATE TABLE IF NOT EXISTS `mobs` (
   `Name` text NOT NULL,
   `aRan` text NOT NULL,
   `LV` text NOT NULL,
-  `HP` tinyint(6) unsigned NOT NULL default '0',
+  `HP` int(11) unsigned NOT NULL default '0',
   `SP` int(9) unsigned NOT NULL default '0',
   `str` mediumint(9) unsigned NOT NULL default '0',
   `int` mediumint(9) unsigned NOT NULL default '0',
   `vit` mediumint(9) unsigned NOT NULL default '0',
-  `dex` tinyint(4) unsigned NOT NULL default '0',
-  `agi` smallint(6) unsigned NOT NULL default '0',
-  `luk` smallint(6) unsigned NOT NULL default '0',
+  `dex` mediumint(9) unsigned NOT NULL default '0',
+  `agi` mediumint(9) unsigned NOT NULL default '0',
+  `luk` mediumint(9) unsigned NOT NULL default '0',
   `attack_rating_min` smallint(6) unsigned NOT NULL default '0',
   `attack_rating_max` smallint(6) unsigned NOT NULL default '0',
-  `def` tinyint(4) unsigned NOT NULL default '0',
-  `exp` tinyint(4) unsigned NOT NULL default '0',
-  `jexp` tinyint(4) unsigned NOT NULL default '0',
+  `def` mediumint(9) unsigned NOT NULL default '0',
+  `exp` int(11) unsigned NOT NULL default '0',
+  `jexp` int(11) unsigned NOT NULL default '0',
   `as` tinyint(4) unsigned NOT NULL default '0',
   `es` tinyint(4) unsigned NOT NULL default '0',
   `mspeed` tinyint(4) unsigned NOT NULL default '0',
-  `attackedmt` tinyint(4) unsigned NOT NULL default '0',
-  `attackmt` tinyint(4) unsigned NOT NULL default '0',
+  `attackedmt` int(11) unsigned NOT NULL default '0',
+  `attackmt` int(11) unsigned NOT NULL default '0',
   `property` tinyint(4) unsigned NOT NULL default '0',
   `scale` tinyint(4) unsigned NOT NULL default '0',
   `class` tinyint(4) unsigned NOT NULL default '0',
